--- a/job/index.html
+++ b/job/index.html
@@ -95,8 +95,8 @@
                 <input type="file" id="fileInput" style="display: none;" />
             </div>
             
-            <div class="grid grid-cols-4 gap-4">
-                <div>
+            <div class="grid grid-cols-1 xl:grid-cols-4 xl:gap-4 ">
+                <div class="mb-5">
                     <div class="flex flex-col border text-left border-gray-500 rounded-xl">
                         <div class="p-5">
                             <div class="my-3">
@@ -115,7 +115,7 @@
                                 <p class="font-bold mb-2">
                                     Job Type
                                 </p>
-                                <form>
+                                <form class="hidden xl:block">
                                     <div class="my-3">
                                         <input id="full-time" type="checkbox" value="full-time"  class="mr-2"/>
                                         <label for="full-time">Full time</label>
@@ -133,6 +133,13 @@
                                         <label for="freelance">Freelance</label>
                                     </div>
                                 </form>
+                                <select id="countries" class="block xl:hidden  text-black text-sm rounded-lg border border-blue-500 block w-full p-4  ">
+                                    <option selected>Category</option>
+                                    <option value="US">United States</option>
+                                    <option value="CA">Canada</option>
+                                    <option value="FR">France</option>
+                                    <option value="DE">Germany</option>
+                                  </select>
                             </div>
                             <div class="my-3">
                                 <p class="font-bold mb-2">
@@ -150,7 +157,7 @@
                                 <p class="font-bold mb-2">
                                     Experience
                                 </p>
-                                <form>
+                                <form class="hidden xl:block">
                                     <div class="my-3">
                                         <input id="full-time" type="checkbox" value="full-time"  class="mr-2"/>
                                         <label for="full-time">1 - 2 Years</label>
@@ -168,12 +175,19 @@
                                         <label for="freelance">6 - more...</label>
                                     </div>
                                 </form>
+                                <select id="countries" class="bg-white text-black text-sm rounded-lg border border-blue-500 block w-full p-4  ">
+                                    <option selected>Category</option>
+                                    <option value="US">United States</option>
+                                    <option value="CA">Canada</option>
+                                    <option value="FR">France</option>
+                                    <option value="DE">Germany</option>
+                                </select>
                             </div>
                             <div class="my-3">
                                 <p class="font-bold mb-2">
                                     Posted within
                                 </p>
-                                <form>
+                                <form class="hidden xl:block">
                                     <div class="my-3">
                                         <input id="full-time" type="checkbox" value="full-time"  class="mr-2"/>
                                         <label for="full-time">Any</label>
@@ -199,11 +213,30 @@
                                         <label for="freelance">Last 10 days</label>
                                     </div>
                                 </form>
+                                <select id="countries" class="bg-white text-black text-sm rounded-lg border border-blue-500 block w-full p-4  ">
+                                    <option selected>Category</option>
+                                    <option value="US">United States</option>
+                                    <option value="CA">Canada</option>
+                                    <option value="FR">France</option>
+                                    <option value="DE">Germany</option>
+                                </select>
                             </div>
                             <div class="my-3">
                                 <p class="font-bold mb-2">
                                     Range
                                 </p>
+                                <div class="my-3">
+                                    <div class="relative ">
+                                      <input type="text" id="floatingInput" placeholder=" " value="0.0" class="block w-full px-4 py-4 bg-white border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent peer" />
+                                      <label for="floatingInput" class="absolute left-2 top-1 px-1 text-gray-500 bg-white transition-all duration-200 transform -translate-y-1/2 scale-75 origin-left peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-3 peer-focus:scale-75 peer-focus:-translate-y-1/2">From</label>
+                                    </div>
+                                </div>
+                                <div class="my-3">
+                                    <div class="relative ">
+                                      <input type="text" id="floatingInput" placeholder=" " value="0.0" class="block w-full px-4 py-4 bg-white border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent peer" />
+                                      <label for="floatingInput" class="absolute left-2 top-1 px-1 text-gray-500 bg-white transition-all duration-200 transform -translate-y-1/2 scale-75 origin-left peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-3 peer-focus:scale-75 peer-focus:-translate-y-1/2">To</label>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -303,39 +336,52 @@
                     </div>
 
 
-                    <nav aria-label="flex item-center justify-center w-full">
-                        <ul class="flex items-center -space-x-px h-8 text-sm">
+                    <nav aria-label="Page navigation example" class="w-full flex item-center justify-center">
+                        <ul class="list-style-none flex">
                           <li>
-                            <a href="#" class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
-                              <span class="sr-only">Previous</span>
-                              <svg class="w-2.5 h-2.5 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
-                              </svg>
-                            </a>
+                            <nav aria-label="Page navigation example">
+                                <ul class="list-style-none flex">
+                                  <li>
+                                    <a
+                                      class="relative block rounded bg-transparent px-3 py-1.5 text-sm text-surface transition duration-300 hover:bg-neutral-100 focus:bg-neutral-100 focus:text-primary-700 focus:outline-none active:bg-neutral-100 active:text-primary-700 dark:text-black dark:hover:bg-neutral-700 dark:focus:bg-neutral-700 dark:focus:text-primary-500 dark:active:bg-neutral-700 dark:active:text-primary-500"
+                                      href="#"
+                                      aria-label="Previous">
+                                      <span aria-hidden="true">&laquo;</span>
+                                    </a>
+                                  </li>
+                                  <li>
+                                    <a
+                                      class="relative block rounded bg-transparent px-3 py-1.5 text-sm text-surface transition duration-300  focus:bg-neutral-100 focus:text-primary-700 focus:outline-none active:bg-neutral-100 active:text-primary-700 text-black dark:hover:bg-neutral-700 dark:focus:bg-neutral-700 dark:focus:text-primary-500 dark:active:bg-neutral-700 dark:active:text-primary-500"
+                                      href="#"
+                                      >1</a
+                                    >
+                                  </li>
+                                  <li aria-current="page">
+                                    <a
+                                      class="relative block rounded bg-transparent px-3 py-1.5 text-sm text-surface transition duration-300  focus:bg-neutral-100 focus:text-primary-700 focus:outline-none active:bg-neutral-100 active:text-primary-700 text-black dark:hover:bg-neutral-700 dark:focus:bg-neutral-700 dark:focus:text-primary-500 dark:active:bg-neutral-700 dark:active:text-primary-500"
+                                      href="#"
+                                      >2</a
+                                    >
+                                  </li>
+                                  <li>
+                                    <a
+                                      class="relative block rounded bg-transparent px-3 py-1.5 text-sm text-surface transition duration-300  focus:bg-neutral-100 focus:text-primary-700 focus:outline-none active:bg-neutral-100 active:text-primary-700 text-black dark:hover:bg-neutral-700 dark:focus:bg-neutral-700 dark:focus:text-primary-500 dark:active:bg-neutral-700 dark:active:text-primary-500"
+                                      href="#"
+                                      >3</a
+                                    >
+                                  </li>
+                                  <li>
+                                    <a
+                                      class="relative block rounded bg-transparent px-3 py-1.5 text-sm text-surface transition duration-300 hover:bg-neutral-100 focus:bg-neutral-100 focus:text-primary-700 focus:outline-none active:bg-neutral-100 active:text-primary-700 dark:text-black dark:hover:bg-neutral-700 dark:focus:bg-neutral-700 dark:focus:text-primary-500 dark:active:bg-neutral-700 dark:active:text-primary-500"
+                                      href="#"
+                                      aria-label="Next"
+                                      ><span aria-hidden="true">&raquo;</span>
+                                    </a>
+                                  </li>
+                                </ul>
+                              </nav>
                           </li>
-                          <li>
-                            <a href="#" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">1</a>
-                          </li>
-                          <li>
-                            <a href="#" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">2</a>
-                          </li>
-                          <li>
-                            <a href="#" aria-current="page" class="z-10 flex items-center justify-center px-3 h-8 leading-tight text-blue-600 border border-blue-300 bg-blue-50 hover:bg-blue-100 hover:text-blue-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white">3</a>
-                          </li>
-                          <li>
-                            <a href="#" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">4</a>
-                          </li>
-                          <li>
-                            <a href="#" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">5</a>
-                          </li>
-                          <li>
-                            <a href="#" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
-                              <span class="sr-only">Next</span>
-                              <svg class="w-2.5 h-2.5 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
-                              </svg>
-                            </a>
-                          </li>
+                          
                         </ul>
                       </nav>
                 </div>
